[tool.poetry]
name = "async-blog"
version = "0.1.0"
description = "一个基于FastAPI的异步博客系统"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
celery = "^5.3.4"
redis = "^5.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.0"  # 添加这一行
markdown = "^3.5"
bcrypt = "^4.0.1"
aioredis = "^2.0.1"
python-json-logger = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
